feat: :sparkles: Endpoints added
Endpoints, frontend and security added

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-		<!--  SECURITY
+		<!--  SECURITY -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -68,7 +68,7 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 			<scope>runtime</scope>
-		</dependency>-->
+		</dependency>
 	</dependencies>
 
 	<build>
